[package]
name = "spl-gmt-staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_gmt_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
arrayref = "0.3.6"
bytemuck = "1.7.2"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.10.15"
spl-token = { version = "3.3", path = "../../token/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"
uint = "0.9"

[dev-dependencies]
assert_matches = "1.5.0"
base64 = "0.13"
log = "0.4.14"
proptest = "1.0"
solana-program-test = "1.10.15"
solana-sdk = "1.10.15"
serde = "1.0"
serde_yaml = "0.8"
